# h-frame

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  RELEASES.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
src/hframe/: __init__.py  bootstrap_cli.py  build_membrane_pyz.py  config.py  embedded.py  env_vars.py  filters.py  git_ops.py  gitignore_policy.py  membrane_bootstrap.py  operations.py  policy_fs.py  policy_vault.py  rsync_util.py  shim_install.py  sync_policy.py  vault_cli.py
src/hframe/native/: shim.c  shim_windows.c
src/hframe/native/prebuilt/: README.md
tests/: test_embedded.py  test_embedded_vault.py  test_filters.py  test_gitignore_policy.py  test_integration.py  test_membrane_bootstrap.py  test_operations.py  test_packaging.py  test_policy_fs.py  test_policy_vault.py  test_shim_install.py  test_sync_policy.py  test_vault_cli.py
tools/: build_windows_shim.sh  create-hframe-parent.sh  run-license-compliance.sh
tools/licensing/: README.md  license_engine.py  license_policy.allowlist.yaml  pip_licenses.py  requirements.txt  scancode_scan.sh  test_validate_report.py  validate_report.py
