[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hframe"
version = "2026.5.0"
description = "H-Frame: compile-time repository isolation membrane"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Pinionize" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4.0",
]

[project.scripts]
hframe-bootstrap = "hframe.bootstrap_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hframe = ["native/shim.c", "native/prebuilt/README.md", "native/prebuilt/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["integration: exercises git, rsync, and local file remotes"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "tools/licensing"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
