[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "h-frame"
version = "2026.6.3"
description = "H-Frame: compile-time repository isolation membrane"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Level Up Labs" }]
keywords = ["h-frame", "agents", "git", "repository-isolation", "devops"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Version Control",
  "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/1eve1Up/h-frame"
Repository = "https://github.com/1eve1Up/h-frame"
Documentation = "https://github.com/1eve1Up/h-frame#readme"
Issues = "https://github.com/1eve1Up/h-frame/issues"

[project.optional-dependencies]
vault = [
  "cryptography>=42.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.4.0",
  "cryptography>=42.0",
  "build>=1.0",
  "twine>=5.0",
]

# Due to PyPI namespace availability, the package is published as h-frame,
# but the executables remain hframe (hframe, hframe-bootstrap, hframe-vault).
[project.scripts]
hframe-bootstrap = "hframe.bootstrap_cli:main"
hframe-vault = "hframe.vault_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hframe = ["native/shim.c", "native/shim_windows.c", "native/prebuilt/README.md", "native/prebuilt/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["integration: exercises git, rsync, and local file remotes"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "tools/licensing"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
